Add gateway-api state metrics via kube-state-metrics

--- a/config/prometheus-for-federation/kustomization.yaml
+++ b/config/prometheus-for-federation/kustomization.yaml
@@ -3,6 +3,7 @@ kind: Kustomization
 
 resources:
   - github.com/prometheus-operator/kube-prometheus?ref=release-0.11
+  - github.com/david-martin/gateway-api-state-metrics?ref=main
   - grafana_ingress.yaml
 # To scrape istio metrics, 3 configurations are required:
 # 1. Envoy metrics directly from the istio ingress gateway pod
@@ -71,6 +72,18 @@ patchesJson6902:
       kind: Deployment
       name: grafana
     path: grafana_deployment_patch.yaml
+  - target:
+      group: apps
+      version: v1
+      kind: Deployment
+      name: kube-state-metrics
+    path: ksm_deployment_patch.yaml
+  - target:
+      group: rbac.authorization.k8s.io
+      version: v1
+      kind: ClusterRole
+      name: kube-state-metrics
+    path: ksm_clusterrole_patch.yaml
 
 generatorOptions:
   disableNameSuffixHash: true
